--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ section{
     width: 100%;
     height: 100vh;
     position: relative;
-    background-image: url("https://github.com/YaqeenAlquwaidhi/portfolio/blob/main/background.png?raw=true");
+    background-image: url("https://YaqeenAlquwaidhi.github.io/portfolio/background.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
