--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ section{
     width: 100%;
     height: 100vh;
     position: relative;
-    background-image: url("https://YaqeenAlquwaidhi.github.io/portfolio/background.png");
+    background-image: url("background.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
